# mapmaker

./: .gitignore  README.md  justfile  pyproject.toml  viewer.py
.claude/agents/: block-builder.md
apps/contracts/: action.py  block.py  block_status.py  coord.py  hex_color.py
apps/map_engine/src/: map.py  map_engine.py
apps/mcp_server/src/: mcp_server.py
apps/render_engine/src/: render_engine.py
docs/versioning/: adr_initial_impl_versioning.md  system_design_changes_for_versioning.d2
tests/test_agents/: test_block_builder_agent.py
tests/test_contracts/: test_hex_color.py
tests/test_map_engine/: conftest.py  test_blocks_color.py  test_map_engine.py
tests/test_mcp_server/: conftest.py  test_mcp_server.py
tests/test_render_engine/: conftest.py  test_render_engine.py
